--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
     <div class="container">
         <div class="left">
           <div class="header">
-            <h2 class="animation a1">Login</h2>
-            <h4 class="animation a2">Log in to your account</h4>
+            <h2>Login</h2>
+            <h4>Log in to your account</h4>
           </div>
           <div class="form">
-            <input type="email" class="form-field animation a3" placeholder="Email Address">
-            <input type="password" class="form-field animation a4" placeholder="Password">
-            <!-- <p class="animation a5"><a href="#">Forgot Password</a></p> -->
-            <button class="animation a6">LOGIN</button>
+            <input type="email" class="form-field" placeholder="Email Address">
+            <input type="password" class="form-field" placeholder="Password">
+            <button>LOGIN</button>
           </div>
         </div>
         <div class="right"></div>
